--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "zkVRF",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "yarn hardhat --network hardhat test"
   },
   "keywords": [],
   "author": "Kevin Charm <k@fairy.dev>",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@noir-lang/backend_barretenberg": "^0.7.10",
+    "@noir-lang/noir_js": "^0.16.0",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
