--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "zkVRF",
   "scripts": {
+    "deploy:scroll": "yarn hardhat --network scroll run scripts/deploy.ts",
+    "deploy-consumer:scroll": "yarn hardhat --network scroll run scripts/deployConsumer.ts",
+    "make-request:scroll": "yarn hardhat --network scroll run scripts/makeRequest.ts",
     "test": "yarn hardhat --network hardhat test"
   },
   "keywords": [],
@@ -15,7 +18,7 @@
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@nomicfoundation/hardhat-verify": "^1.0.0",
+    "@nomicfoundation/hardhat-verify": "^1.1.1",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
     "@types/chai": "^4.3.6",
