--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "zkVRF",
   "scripts": {
+    "deploy:scrolltestnet": "yarn hardhat --network scrollSepolia run scripts/deploy.ts",
+    "deploy-consumer:scrolltestnet": "yarn hardhat --network scrollSepolia run scripts/deployConsumer.ts",
+    "make-request:scrolltestnet": "yarn hardhat --network scrollSepolia run scripts/makeRequest.ts",
     "deploy:scroll": "yarn hardhat --network scroll run scripts/deploy.ts",
     "deploy-consumer:scroll": "yarn hardhat --network scroll run scripts/deployConsumer.ts",
     "make-request:scroll": "yarn hardhat --network scroll run scripts/makeRequest.ts",
@@ -25,7 +28,7 @@
     "@types/mocha": "^10.0.1",
     "chai": "^4.2.0",
     "dotenv": "^16.3.1",
-    "ethers": "^6.4.0",
+    "ethers": "^6.8.0",
     "hardhat": "^2.17.2",
     "hardhat-abi-exporter": "^2.10.1",
     "hardhat-contract-sizer": "^2.10.0",
